updated changed to push live

--- a/index.html
+++ b/index.html
@@ -176,17 +176,17 @@
                             Hire me for your web development, product management or overall startup needs.<br><br>
                         </p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                                <ul>
+                                <!-- <ul>
                                     <li><span>html</span></li>
                                     <li><span>css</span></li>
                                     <li><span>Javascript</span></li>
                                     <li><span>Ruby</span></li>
                                     <li><span>Ruby on Rails</span></li>
                                     <li><span>Python</span></li>
-                                    <!-- <li><span>Javascript</span></li> -->
-                                </ul>
+                                    <li><span>Javascript</span></li>
+                                </ul> -->
                             </div>
-                            <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <!-- <a href="" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -209,9 +209,7 @@
                             <i class="fa fa-code purple-color"></i>
                             <h3>Web Development</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                magna aliquam erat volutpat.
+                                I have mostly built Rails applications, but I have started learning React and will be focusing on increasing my React skills. 
                             </p>
                         </div>
                     </div>
@@ -220,9 +218,7 @@
                             <i class="fa fa-desktop iron-color"></i>
                             <h3>Product Manager</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                magna aliquam erat volutpat.
+                                I combine my business and technical skills together with focusing on customer empathy to craft products customers love to use.
                             </p>
                         </div>
                     </div>
@@ -231,9 +227,7 @@
                             <i class="fa fa-object-ungroup sky-color"></i>
                             <h3>Startup Advisor</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                magna aliquam erat volutpat.
+                                Over the past 5 years I have been involved with many early stage startup and started one myself. Thsi has givin me some unique insights during the early stages.
                             </p>
                         </div>
                     </div>
@@ -242,9 +236,7 @@
                             <i class="fa fa-usd sky-color"></i>
                             <h3>Angel Investor</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                                magna aliquam erat volutpat.
+                                I love startup and know how hard it is to raise funds. To help my fellow founder, I invest small amounts on Republic on projects I like and use.
                             </p>
                         </div>
                     </div>
@@ -271,22 +263,33 @@
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Javascript</div>
-                                                <div class="percentagem-num">86%</div>
+                                                <div class="nome">HTML</div>
+                                                <div class="percentagem-num">90%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 86%;"></div>
+                                                <div class="percentagem" style="width: 90%;"></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">Java</div>
-                                                <div class="percentagem-num">46%</div>
+                                                <div class="nome">CSS</div>
+                                                <div class="percentagem-num">80%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 46%;"></div>
+                                                <div class="percentagem" style="width: 80%;"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="candidatos">
+                                        <div class="parcial">
+                                            <div class="info">
+                                                <div class="nome">Ruby on Rails</div>
+                                                <div class="percentagem-num">75%</div>
+                                            </div>
+                                            <div class="progressBar">
+                                                <div class="percentagem" style="width: 75%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -294,32 +297,21 @@
                                         <div class="parcial">
                                             <div class="info">
                                                 <div class="nome">Python</div>
-                                                <div class="percentagem-num">38%</div>
+                                                <div class="percentagem-num">50%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 38%;"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="candidatos">
-                                        <div class="parcial">
-                                            <div class="info">
-                                                <div class="nome">PHP</div>
-                                                <div class="percentagem-num">17%</div>
-                                            </div>
-                                            <div class="progressBar">
-                                                <div class="percentagem" style="width: 17%;"></div>
+                                                <div class="percentagem" style="width: 50%;"></div>
                                             </div>
                                         </div>
                                     </div>                                    
                                     <div class="candidatos">
                                         <div class="parcial">
                                             <div class="info">
-                                                <div class="nome">PHP</div>
-                                                <div class="percentagem-num">17%</div>
+                                                <div class="nome">JavaScript & React</div>
+                                                <div class="percentagem-num">25%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 17%;"></div>
+                                                <div class="percentagem" style="width: 25%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -336,15 +328,15 @@
                                     <div class="pr-skill-name">Communication</div>
                                 </li>
                                 <li>
-                                    <div class="mh-progress mh-progress-circle" data-progress="55"></div> 
+                                    <div class="mh-progress mh-progress-circle" data-progress="100"></div> 
                                     <div class="pr-skill-name">Team Work</div>
                                 </li>
                                 <li>
-                                    <div class="mh-progress mh-progress-circle" data-progress="86"></div>
-                                    <div class="pr-skill-name">Project Management</div>
+                                    <div class="mh-progress mh-progress-circle" data-progress="90"></div>
+                                    <div class="pr-skill-name">Project & Product Management</div>
                                 </li> 
                                 <li>
-                                    <div class="mh-progress mh-progress-circle" data-progress="60"></div>
+                                    <div class="mh-progress mh-progress-circle" data-progress="90"></div>
                                     <div class="pr-skill-name">Creativity</div>
                                 </li>
                             </ul>
@@ -601,6 +593,7 @@
                                 <ul>
                                     <li><span>html</span></li>
                                     <li><span>css</span></li>
+                                    <li><span>JavaScript</span></li>
                                     <li><span>Ruby</span></li>
                                     <li><span>Ruby on Rails</span></li>
                                     <li><span>Stripe</span></li>
@@ -864,8 +857,8 @@
                         <div class="col-sm-12 col-md-4">
                             <div class="mh-pricing dark-bg shadow-2 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                                 <i class="fa fa-hourglass"></i>
-                                <h4>Hourley work</h4>
-                                <p>I am available for Hourley projets</p>
+                                <h4>Hourly work</h4>
+                                <p>I am available for Hourly projets</p>
                                 <h5>$35</h5>
                                 <ul>
                                     <li>Web Development</li>
@@ -894,13 +887,13 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                          <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                            <img src="assets/images/b-3.png" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/b-3.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">A life without the daily traffic jams</a></h2>
+                                <h2><a href="blog-single.html">Life before and after COVID19</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
                                         <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                        <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
                                     </ul>
                                 </div>
                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
@@ -910,33 +903,33 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                            <img src="assets/images/b-2.png" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/b-2.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">Proportion are what’s really needed</a></h2>
+                                <h2><a href="blog-single.html">The cost of college is a rip-off</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
-                                        <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                        <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                        <li><strong>Post On</strong><a href="">07.22.18</a></li>
+                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
                                     </ul>
                                 </div>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                <a href="blog-single.html">Read More</a>
+                                <p>I finally started reading Malcom Gladwell’s book, Outliers. Although written in 2008, it is still relevant today.</p>
+                                <a href="https://medium.com/@ryanamorrison/the-cost-of-college-is-a-rip-off-6422c6578807">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                            <img src="assets/images/b-1.png" alt="" class="img-fluid">
+                            <!-- <img src="assets/images/b-1.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">Mounts of paper work to remember the way</a></h2>
+                                <h2><a href="blog-single.html">The Truth to 3 Student Debt Myths</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
-                                        <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                        <li><strong>By</strong><a href="">ThemeSpiders</a></li>
+                                        <li><strong>Post On</strong><a href="">06.30.19</a></li>
+                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
                                     </ul>
                                 </div>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                <a href="blog-single.html">Read More</a>
+                                <p>Student debt has reached an all-time high, with $1.6 trillion in the United States spread among 44.2 million Americans</p>
+                                <a href="https://medium.com/@ryanamorrison/the-truth-to-3-student-debt-myths-e1ffffb2d7c0">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -949,7 +942,7 @@
            TESTIMONIALS
         ===================
         -->
-        <section class="mh-testimonial" id="mh-testimonial">
+        <!-- <section class="mh-testimonial" id="mh-testimonial">
             <div class="home-v-img">
                 <div class="container">
                     <div class="row section-separator">
@@ -1023,7 +1016,7 @@
                     </div>
                 </div> 
             </div>
-        </section>
+        </section> -->
         
         <!--
         ===================
