--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                          <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                             <!-- <img src="assets/images/b-3.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">Life before and after COVID19</a></h2>
+                                <h2><a href="#">Life before and after COVID19</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
                                         <li><strong>Post On</strong><a href="">24.11.19</a></li>
@@ -897,7 +897,7 @@
                                     </ul>
                                 </div>
                                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                <a href="blog-single.html">Read More</a>
+                                <a href="#">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -905,7 +905,7 @@
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <!-- <img src="assets/images/b-2.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">The cost of college is a rip-off</a></h2>
+                                <h2><a href="https://medium.com/@ryanamorrison/the-cost-of-college-is-a-rip-off-6422c6578807">The cost of college is a rip-off</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
                                         <li><strong>Post On</strong><a href="">07.22.18</a></li>
@@ -921,7 +921,7 @@
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
                             <!-- <img src="assets/images/b-1.png" alt="" class="img-fluid"> -->
                             <div class="blog-inner">
-                                <h2><a href="blog-single.html">The Truth to 3 Student Debt Myths</a></h2>
+                                <h2><a href="https://medium.com/@ryanamorrison/the-truth-to-3-student-debt-myths-e1ffffb2d7c0">The Truth to 3 Student Debt Myths</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
                                         <li><strong>Post On</strong><a href="">06.30.19</a></li>
