--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-0 ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#mh-home">Home</a>
+                                    <a class="nav-link" href="#mh-home">Homes</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-about">About</a>
