--- a/index.html
+++ b/index.html
@@ -549,16 +549,16 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
-                                    <!-- <figure>
-                                        <img src="assets/images/portfolio/g9.png" alt="img04">
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                    <figure>
+                                        <img src="assets/images/portfolio/covid19.png" alt="img04">
                                         <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g9.png" data-fancybox data-src="#mh"></a>
+                                            <h5 class="title">Covid19Helpers</h5>
+                                            <span class="sub-title">Web development</span>
+                                            <a href="assets/images/portfolio/covid19.png" data-fancybox data-src="#ch19"></a>
                                         </figcaption>
-                                    </figure> -->
+                                    </figure>
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <!-- <figure>
@@ -680,6 +680,35 @@
                             <div class="mh-portfolio-modal-img">
                                 <img src="assets/images/clickmytrips.png" alt="" class="img-fluid">
                                 <p>On-demand professional photography for your next unforgettable African experience.</p>    
+                                <!-- <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
+                                <p>All variations are organized separately so you can use / customize the template very easily.</p>      -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mh-portfolio-modal" id="ch19">
+                <div class="container">
+                    <div class="row mh-portfolio-modal-inner">
+                        <div class="col-sm-5">
+                            <h2>Covid19Helpers</h2>
+                            <p>This is my first MERN stack application.  I thought that while getitng some practice why not build something useful.</p>       
+                            <p>I had to get some help with setting up the database, as I am much more comfortable with relational databases.  This was a good challenge.</p>      
+                            <div class="mh-about-tag">
+                                <ul>
+                                    <li><span>React</span></li>
+                                    <li><span>Express</span></li>
+                                    <li><span>Node</span></li>
+                                    <li><span>Mongo</span></li>                                    
+                                </ul>
+                            </div>
+                            <a href="https://www.covid19helpers.app/" class="btn btn-fill">Website</a>
+                        </div>
+                        <div class="col-sm-7">
+                            <div class="mh-portfolio-modal-img">
+                                <img src="assets/images/covid19.png" alt="" class="img-fluid">
+                                <p>Get help from your comminuty, no questions asked.</p>    
                                 <!-- <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
                                 <p>All variations are organized separately so you can use / customize the template very easily.</p>      -->
                             </div>
