--- a/index.html
+++ b/index.html
@@ -1089,7 +1089,7 @@
                             </div>
                         </div>
                         <div class="col-sm-12  wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                            <form id="contactForm" class="single-form quate-form wow fadeInUp" data-netlify="true" data-toggle="validator">
+                            <form id="contactForm" class="single-form quate-form wow fadeInUp" method="POST" data-netlify="true" data-toggle="validator">
                                 <div id="msgSubmit" class="h3 text-center hidden"></div>
                                 <div class="row">
                                     <div class="col-md-6 col-sm-12">
