--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
         <link rel="alternate stylesheet" href="assets/css/colors/purple.css" title="purple">
         <link rel="alternate stylesheet" href="assets/css/colors/slate.css" title="slate">
         <link rel="alternate stylesheet" href="assets/css/colors/yellow.css" title="yellow">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148502404-3"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-148502404-3');
+        </script>
+
     </head>
     <body class="white-vertion black-bg">
         <!-- Start Loader -->
