--- a/index.html
+++ b/index.html
@@ -1106,13 +1106,13 @@
                                         <input name="name" class="contact-name form-control" id="name" type="text" placeholder="First Name" required>
                                     </div>
                                     <div class="col-md-6 col-sm-12">
-                                        <input name="name" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
+                                        <input name="lastname" class="contact-email form-control" id="L_name" type="text" placeholder="Last Name" required>
                                     </div>
                                     <div class="col-sm-12">
-                                        <input name="name" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
+                                        <input name="email" class="contact-subject form-control" id="email" type="email" placeholder="Your Email" required>
                                     </div>
                                     <div class="col-sm-12">
-                                        <textarea class="contact-message" id="message" rows="6" placeholder="Your Message" required></textarea>
+                                        <textarea name="message" class="contact-message" id="message" rows="6" placeholder="Your Message" required></textarea>
                                     </div>
                                     <!-- Subject Button -->
                                     <div class="btn-form col-sm-12">
