--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <i class="fa fa-usd sky-color"></i>
                             <h3>Angel Investor</h3>
                             <p>
-                                I love startups and know how hard it is to raise funds. To help my fellow founder, I invest small amounts on Republic in projects I like to use.
+                                I love startups and know how hard it is to raise funds. To help my fellow founders, I invest small amounts on Republic in projects I like to use.
                             </p>
                         </div>
                     </div>
