--- a/index.html
+++ b/index.html
@@ -570,6 +570,17 @@
                                         </figcaption>
                                     </figure>
                                 </div>
+                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 invest">
+                                    <figure>
+                                        <img src="assets/images/portfolio/plei.png" alt="img04">
+                                        <figcaption class="fig-caption">
+                                            <i class="fa fa-search"></i>
+                                            <h5 class="title">Plei</h5>
+                                            <span class="sub-title">Investor</span>
+                                            <a data-fancybox data-src="#plei"></a>
+                                        </figcaption>
+                                    </figure>
+                                </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <!-- <figure>
                                         <img src="assets/images/portfolio/g7.jpg" alt="img04">
@@ -838,6 +849,44 @@
                 </div>
             </div>
 
+            <div class="mh-portfolio-modal" id="plei">
+                <div class="container">
+                    <div class="row mh-portfolio-modal-inner">
+                        <div class="col-sm-5">
+                            <h2>Plei</h2>
+                            <p>I have played soccer since I am 7 years old.  I often travel and always look for pick up games where ever I go.
+                                I wish I had plei when I traveled and was looking for a pick up game. I can now use this app to find games in my city
+                                and in cities around the word.
+                            </p>       
+                            
+                            <p>The company is growing well and still has a lot of room for growth.</p>      
+                            <div class="mh-about-tag">
+                                <ul>
+                                    <!-- <li><span>html</span></li>
+                                    <li><span>css</span></li>
+                                    <li><span>JavaScript</span></li>
+                                    <li><span>Ruby</span></li>
+                                    <li><span>Ruby on Rails</span></li>
+                                    <li><span>Stripe</span></li>
+                                    <li><span>Plaid</span></li>
+                                    <li><span>Admin Panel</span></li>
+                                    <li><span>Digital Ocean</span></li> -->
+                                </ul>
+                            </div>
+                            <a href="https://plei.app/" class="btn btn-fill">Live Demo</a>
+                        </div>
+                        <div class="col-sm-7">
+                            <div class="mh-portfolio-modal-img">
+                                <img src="assets/images/plei.png" alt="" class="img-fluid">
+                                <p>Soccer for everyone, on demand.</p>    
+                                <!-- <img src="assets/images/pr-1.jif" alt="" class="img-fluid">
+                                <p>All variations are organized separately so you can use / customize the template very easily.</p>      -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
         
         <!--
@@ -860,6 +909,7 @@
                                 <h5>$0</h5>
                                 <ul>
                                     <li>Startup advice</li>
+                                    <li>Product advice</li>
                                     <li>Fund raising advice</li>
                                     <li>Getting started advice</li>
                                     <li>Advice on any startup topic</li>
@@ -875,6 +925,7 @@
                                 <h5>$350</h5>
                                 <ul>
                                     <li>Web Development</li>
+                                    <li>Product Management</li>
                                     <li>Pitch deck building</li>
                                     <li>MVP building</li>
                                     <li>In depth startup consulting</li>
@@ -890,6 +941,7 @@
                                 <h5>$35</h5>
                                 <ul>
                                     <li>Web Development</li>
+                                    <li>Product Management</li>
                                     <li>Pitch deck building</li>
                                     <li>MVP building</li>
                                     <li>In depth startup consulting</li>
@@ -915,29 +967,29 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                          <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                            <!-- <img src="assets/images/b-3.png" alt="" class="img-fluid"> -->
+                            <img src="assets/images/plei.png" alt="" class="img-fluid">
                             <div class="blog-inner">
-                                <h2><a href="#">Life before and after COVID19</a></h2>
+                                <h2><a href="https://medium.com/@ryanamorrison/why-i-am-investing-in-plei-fda0b200c284">Why I am investing in Plei</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
-                                        <li><strong>Post On</strong><a href="">24.11.19</a></li>
-                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
+                                        <li><strong>Post On</strong>03.26.20</li>
+                                        <!-- <li><strong>By</strong><a href="">Ryan Morrison</a></li> -->
                                     </ul>
                                 </div>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout</p>
-                                <a href="#">Read More</a>
+                                <p>My latest investment is in Plei — Play soccer on demand. I like this company for many reasons. I started playing soccer when I was 7 years old</p>
+                                <a href="https://medium.com/@ryanamorrison/why-i-am-investing-in-plei-fda0b200c284">Read More</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s">
-                            <!-- <img src="assets/images/b-2.png" alt="" class="img-fluid"> -->
+                            <img src="assets/images/College_article.png" alt="" class="img-fluid">
                             <div class="blog-inner">
                                 <h2><a href="https://medium.com/@ryanamorrison/the-cost-of-college-is-a-rip-off-6422c6578807">The cost of college is a rip-off</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
                                         <li><strong>Post On</strong>07.22.18</li>
-                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
+                                        <!-- <li><strong>By</strong><a href="">Ryan Morrison</a></li> -->
                                     </ul>
                                 </div>
                                 <p>I finally started reading Malcom Gladwell’s book, Outliers. Although written in 2008, it is still relevant today.</p>
@@ -947,13 +999,13 @@
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <div class="mh-blog-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
-                            <!-- <img src="assets/images/b-1.png" alt="" class="img-fluid"> -->
+                            <img src="assets/images/myth_article.jpeg" alt="" class="img-fluid">
                             <div class="blog-inner">
                                 <h2><a href="https://medium.com/@ryanamorrison/the-truth-to-3-student-debt-myths-e1ffffb2d7c0">The Truth to 3 Student Debt Myths</a></h2>
                                 <div class="mh-blog-post-info">
                                     <ul>
-                                        <li><strong>Post On</strong><a href="">06.30.19</a></li>
-                                        <li><strong>By</strong><a href="">Ryan Morrison</a></li>
+                                        <li><strong>Post On</strong>06.30.19</li>
+                                        <!-- <li><strong>By</strong><a href="">Ryan Morrison</a></li> -->
                                     </ul>
                                 </div>
                                 <p>Student debt has reached an all-time high, with $1.6 trillion in the United States spread among 44.2 million Americans</p>
