--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
     <!-- Map api -->
     <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCRP2E3BhaVKYs7BvNytBNumU0MBmjhhxc"></script>
     <!-- Custom Scripts-->
-    <script src="assets/js/map-init.js"></script>
+    <!-- <script src="assets/js/map-init.js"></script> -->
     <script src="assets/js/custom-scripts.js"></script>
 
 </body>
