--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                                         </figcaption>
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
                                     <figure>
                                         <img src="assets/images/portfolio/covid19.png" alt="img04">
                                         <figcaption class="fig-caption">
@@ -561,7 +561,7 @@
                                             <a href="assets/images/portfolio/covid19.png" data-fancybox data-src="#ch19"></a>
                                         </figcaption>
                                     </figure>
-                                </div>
+                                </div> -->
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 invest">
                                     <figure>
                                         <img src="assets/images/portfolio/plei.png" alt="img04">
@@ -675,7 +675,7 @@
                 </div>
             </div>
 
-            <div class="mh-portfolio-modal" id="ch19">
+            <!-- <div class="mh-portfolio-modal" id="ch19">
                 <div class="container">
                     <div class="row mh-portfolio-modal-inner">
                         <div class="col-sm-5">
@@ -700,7 +700,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="mh-portfolio-modal" id="sliq">
                 <div class="container">
