--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <i class="fa fa-code purple-color"></i>
                             <h3>Web Development</h3>
                             <p>
-                                I have mostly built Rails applications, but I have started learning React and will be focusing on increasing my React skills going forward. 
+                                I have mostly built Rails applications, however, I am now focused on JavaScript and React development. <br><br>
                             </p>
                         </div>
                     </div>
@@ -311,10 +311,10 @@
                                         <div class="parcial">
                                             <div class="info">
                                                 <div class="nome">JavaScript & React</div>
-                                                <div class="percentagem-num">45%</div>
+                                                <div class="percentagem-num">60%</div>
                                             </div>
                                             <div class="progressBar">
-                                                <div class="percentagem" style="width: 45%;"></div>
+                                                <div class="percentagem" style="width: 60%;"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -833,7 +833,7 @@
                                     <li>Getting started advice</li>
                                     <li>Advice on any startup topic</li>
                                 </ul>
-                                <a href="https://calendly.com/ryanam6480/free-30-min-session" class="btn btn-fill">Book Session</a>
+                                <a href="ryanam6480@gmail.com" class="btn btn-fill">Book Session</a>
                             </div>  
                         </div>                    
                         <div class="col-sm-12 col-md-4">
@@ -849,7 +849,7 @@
                                     <li>MVP building</li>
                                     <li>In depth startup consulting</li>
                                 </ul>
-                                <a href="mailto:hello@ryanmorrison.io" class="btn btn-fill">Hire Me</a>
+                                <a href="mailto:ryanam6480@gmail.com" class="btn btn-fill">Hire Me</a>
                             </div>  
                         </div>
                         <div class="col-sm-12 col-md-4">
@@ -865,7 +865,7 @@
                                     <li>MVP building</li>
                                     <li>In depth startup consulting</li>
                                 </ul>
-                                <a href="mailto:hello@ryanmorrison.io" class="btn btn-fill">Hire Me</a>
+                                <a href="mailto:ryanam6480@gmail.com" class="btn btn-fill">Hire Me</a>
                             </div>  
                         </div>
                     </div>
