--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <i class="fa fa-code purple-color"></i>
                             <h3>Web Development</h3>
                             <p>
-                                I have mostly built Rails applications, however, I am now focused on JavaScript and React development. <br><br>
+                                Over the past 5 years I've built Rails applications, however, I am now focused on JavaScript and React development. <br><br>
                             </p>
                         </div>
                     </div>
