--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                             <li><i class="fa fa-circle"></i>Implementing user acquisition processes using social media, PR and third-party integrations.</li>
                                             <li><i class="fa fa-circle"></i>Leading and validating the UI/UX and first-time user experience of the product.</li>
                                             <li><i class="fa fa-circle"></i>Applied agile methodologies (SCRUM and Kanban) to manage a remote technical team.</li>
-                                            <li><i class="fa fa-circle"></i>Selecting the KPIs, defining the main hypotheses to validate and tracking them using analytics.</li>
+                                            <li><i class="fa fa-circle"></i>Selected the KPIs, defined the main hypotheses to validate and tracked them using analytics.</li>
                                         </ul>
                                     </div>
                                     <div class="mh-work-item dark-bg wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.7s">
