updated nav buttons

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                    <a class="nav-link" href="#mh-skills">Skills</a>
                                 </li>                                
                                 <li class="nav-item">
-                                   <a class="nav-link" href="#mh-experience">Experiences</a>
+                                   <a class="nav-link" href="#mh-experience">Experience</a>
                                 </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#mh-portfolio">Portfolio</a>
